--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <div class="button-group">
   <a href="https://t.me/MauroCashMozBot" class="btn" target="_blank" rel="noopener noreferrer">FALAR COM MAURO</a>
-  <a href="https://affpa.top/L?tag=d_2861313m_97c_&site=2861313&ad=97&r=registration" class="btn glow" target="_blank" rel="noopener noreferrer">JOGAR AQUI / LLF89</a>
+  <a href="https://affpa.top/L?tag=d_2861313m_97c_&site=2861313&ad=97&r=registration" class="btn glow" target="_blank" rel="noopener noreferrer">JOGAR AQUI / MNY111</a>
 </div>
 
 <div id="winners"></div>
