--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <button id="get-signal-btn" onclick="getSignal()">OBTER O SINAL</button>
 
 <div class="button-group">
-  <a href="https://t.me/MauroCashMozBot" class="btn" target="_blank" rel="noopener noreferrer">FALAR COM MAURO</a>
+  <a href="https://t.me/Bosss_Money_Bot" class="btn" target="_blank" rel="noopener noreferrer">FALAR COM MAURO</a>
   <a href="https://affpa.top/L?tag=d_4302891m_19545c_&site=4302891&ad=19545&r=registration" class="btn glow" target="_blank" rel="noopener noreferrer">JOGAR AQUI / MNY111</a>
 </div>
 
